Adding initial code changes, trying to build an exoskeleton from front to end. Trying to make this as generic as possible!

--- a/Content/Custom Styles/HomePage.css
+++ b/Content/Custom Styles/HomePage.css
@@ -125,3 +125,9 @@ input:focus-visible {
     padding: 10px;
     border-radius: 20px;
 }
+
+.modal-dialog {
+    height: 90%;
+    display: flex;
+    align-items: center;
+}
