Making a startup dialog to get the user crendentials for login/registering. Still more coding to do!

--- a/Views/Home/HomePage.cshtml
+++ b/Views/Home/HomePage.cshtml
@@ -113,8 +113,12 @@
                             </form>
                         </div>
                         <div class="modal-footer">
+                            <button type="button" class="btn btn-primary pull-left"
+                                    onclick="registerUser()">
+                                Register
+                            </button>
                             <button type="button" class="btn btn-success"
-                                    data-dismiss="modal" onclick="establishConnection()">
+                                    onclick="establishConnection()">
                                 Submit
                             </button>
                         </div>
