--- a/Views/Home/HomePage.cshtml
+++ b/Views/Home/HomePage.cshtml
@@ -99,17 +99,17 @@
                 <div class="modal-dialog modal-sm">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">
+                            @*<button type="button" class="close" data-dismiss="modal">
                                 &times;
-                            </button>
+                            </button>*@
                             <h4 class="modal-title">Enter Credentials</h4>
                         </div>
                         <div class="modal-body">
                             <form>
-                                <label>User Name</label>
-                                <input id="userName" type="text" class="form-control" />
-                                <label>Password</label>
-                                <input id="password" type="password" class="form-control" />
+                                <label>User Name <label style="color: red;">*</label></label>
+                                <input id="userName" type="text" class="form-control" required />
+                                <label>Password <label style="color: red;">*</label></label>
+                                <input id="password" type="password" class="form-control" required />
                             </form>
                         </div>
                         <div class="modal-footer">
@@ -117,7 +117,7 @@
                                     onclick="registerUser()">
                                 Register
                             </button>
-                            <button type="button" class="btn btn-success"
+                            <button type="submit" class="btn btn-success"
                                     onclick="establishConnection()">
                                 Submit
                             </button>
