Major Code changes!!!! Added functionality to dynamically added Users to Chat List on Starting New Convo. Added a lot of events incuding loading/opening Conversations on selceting particular Users from the list (on the left). Convo. window automatically updates the name based on currently selected User. Also, added functionality to display sent messages on the conversation window. Still a lot more to do! A lot more to code!!!

--- a/Content/Custom Styles/HomePage.css
+++ b/Content/Custom Styles/HomePage.css
@@ -161,5 +161,23 @@ input:focus-visible {
 .loader-label {
     align-self: inherit;
     z-index: inherit;
-    margin-top: 12%;
+
+}
+
+.floating-div {
+    top: 92%;
+    left: 14%;
+    position: absolute;
+}
+
+.floating-button {
+    height: 50px;
+    width: 50px;
+    border-radius: 15px;
+    font-size: 1.5em;
+    padding: 8px 13px;
+}
+
+.clickable {
+    cursor: pointer;
 }
