--- a/Views/Home/HomePage.cshtml
+++ b/Views/Home/HomePage.cshtml
@@ -54,8 +54,8 @@
             <div class="right-panel">
                 <div id="custom-card-header" class="card-header hidden" style="background-color: green; height: auto;">
                     <div class="card-content dflex" style="padding: 5px 7px; border-bottom: 1px solid grey; height: auto;">
-                        <div id="img-div" class="img-circle fake-img hidden" style="flex: 3%;"></div>
-                        <div class="dflexcol card-details" style="flex: 90%;">
+                        <div id="img-div" class="img-circle fake-img hidden" style="flex: 4%;"></div>
+                        <div id="cardDetails" class="dflexcol card-details">
                             <h3 id="currentConvoUserName" class="custom-margin-block"></h3>
                             <label id="currentConvoLabel"></label>
                         </div>
